// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Styles should render the giga size 1`] = `
.circuit-0 {
  width: 48px;
  height: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(48px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0 svg {
  width: 24px;
  height: 24px;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      viewBox="0 0 96 96"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30 25c0-4.9706 4.0294-9 9-9s9 4.0294 9 9-4.0294 9-9 9-9-4.0294-9-9zM41.1571 60.5691L30.6742 48.3905c-1.6438-1.9097-4.6225-1.8422-6.1782.1399L8 69.5483v12.4515c0 3.3137 2.6863 6 6 6h5.9592l21.1979-27.4307zM70.4856 32.878c1.5553-2.002 4.5569-2.0705 6.202-.1417l11.312 13.2623v36c0 3.3137-2.6863 6-6 6H27.6611L70.4856 32.878z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render the identity variant placeholder 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0 svg {
  width: 24px;
  height: 24px;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22.981 21.22A11.074 11.074 0 0 0 12 12a11.074 11.074 0 0 0-10.981 9.22A1.576 1.576 0 0 0 2.6 23h18.8a1.576 1.576 0 0 0 1.581-1.78zM12 19.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm4.5-14a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render the identity variant with an image 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 100%;
  display: block;
  object-fit: cover;
  object-position: center;
}

<div>
  <img
    alt=""
    class="circuit-0"
    src="/images/illustration-cat.jpg"
  />
</div>
`;

exports[`Avatar Styles should render the identity variant with initials 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0 svg {
  width: 24px;
  height: 24px;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    JD
  </div>
</div>
`;

exports[`Avatar Styles should render the object variant placeholder 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0 svg {
  width: 24px;
  height: 24px;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      viewBox="0 0 96 96"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30 25c0-4.9706 4.0294-9 9-9s9 4.0294 9 9-4.0294 9-9 9-9-4.0294-9-9zM41.1571 60.5691L30.6742 48.3905c-1.6438-1.9097-4.6225-1.8422-6.1782.1399L8 69.5483v12.4515c0 3.3137 2.6863 6 6 6h5.9592l21.1979-27.4307zM70.4856 32.878c1.5553-2.002 4.5569-2.0705 6.202-.1417l11.312 13.2623v36c0 3.3137-2.6863 6-6 6H27.6611L70.4856 32.878z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render the object variant with an image 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: block;
  object-fit: cover;
  object-position: center;
}

<div>
  <img
    alt=""
    class="circuit-0"
    src="/images/illustration-coffee.jpg"
  />
</div>
`;

exports[`Avatar Styles should render the yotta size 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0 svg {
  width: 24px;
  height: 24px;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      viewBox="0 0 96 96"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30 25c0-4.9706 4.0294-9 9-9s9 4.0294 9 9-4.0294 9-9 9-9-4.0294-9-9zM41.1571 60.5691L30.6742 48.3905c-1.6438-1.9097-4.6225-1.8422-6.1782.1399L8 69.5483v12.4515c0 3.3137 2.6863 6 6 6h5.9592l21.1979-27.4307zM70.4856 32.878c1.5553-2.002 4.5569-2.0705 6.202-.1417l11.312 13.2623v36c0 3.3137-2.6863 6-6 6H27.6611L70.4856 32.878z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render with default styles 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-0 svg {
  width: 24px;
  height: 24px;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      viewBox="0 0 96 96"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M30 25c0-4.9706 4.0294-9 9-9s9 4.0294 9 9-4.0294 9-9 9-9-4.0294-9-9zM41.1571 60.5691L30.6742 48.3905c-1.6438-1.9097-4.6225-1.8422-6.1782.1399L8 69.5483v12.4515c0 3.3137 2.6863 6 6 6h5.9592l21.1979-27.4307zM70.4856 32.878c1.5553-2.002 4.5569-2.0705 6.202-.1417l11.312 13.2623v36c0 3.3137-2.6863 6-6 6H27.6611L70.4856 32.878z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
